- Added page titles using base.html blocks

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Card Collector - Admin
+{% endblock %}
+
 {% block main %}
 
 <div class="container wide">
