--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Card Collector - Signup
+{% endblock %}
+
 {% block main %}
 <div class="container">
     <h1>SIGN UP</h1>
