--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,32 +6,33 @@
 
 {% block main %}
 
-<div class="container wide">
+<div class="container wide admin">
     <h1>ADMIN</h1>
     <h3>- User Management -</h3>
     <table id="table-users">
         <tr>
             <th>USER ID</th>
-            <th>USERNAME</th>
+            <th>NAME</th>
             <th>EMAIL</th>
             <th>ADMIN</th>
             {% if not confirm_delete and not edit_user %}
             <th>ACTION</th>
             {% endif %}
         </tr>
+
     {% for user in users %}
         <tr>            
-            <td>{{user[0]}}</td>  <!--USER ID-->
-            <td>{{user[1]}}</td>  <!--USERNAME-->    
-            <td>{{user[2]}}</td>  <!--EMAIL-->
-            <td>{{user[6]}}</td>  <!--ADMIN (BOOLEAN)-->
+            <td>{{user[0]}}</td>  
+            <td>{{user[1]}}</td>     
+            <td>{{user[2]}}</td>  
+            <td>{{user[3]}}</td>  
             {% if not confirm_delete and not edit_user %}
             <form action="/delete_user" method="POST">
                 <input type="hidden" name="id" value="{{user[0]}}">
                 <td class="flex-col">
-                    <button formaction="/edit_user" class="button-users">Edit</button>
+                    <button formaction="/edit_user" class="button-users core-color1">Edit</button>
                     {% if not user[6] %}
-                    <button class="button-users">Delete</button>
+                    <button class="button-users core-color1">Delete</button>
                     {% endif %}
                 </td>
             </form>
@@ -48,15 +49,17 @@
         </form>
     {% endif %}
     {% if edit_user %}
-    <form action="/edit_action" method="POST">
+    <form id="admin_field" action="/edit_action" method="POST">
         <input type="hidden" name="id" value="{{users[0][0]}}">
-        <input type="checkbox" name="reset" value=True>Reset Password</input>
-        <input type="checkbox" name="wipe" value=True>Wipe Cards</input>
-        {% if users[0][6] %}
-            <input type="checkbox" name="remove_admin" value=True>Remove Admin</input>
-        {% else %}
-            <input type="checkbox" name="make_admin" value=True>Make Admin</input>
-        {% endif %}
+        <div id="admin_options" class="color-color1">
+            <div><input type="checkbox" name="reset" value=True>Reset Password</div>
+            <div><input type="checkbox" name="wipe" value=True>Wipe Cards</div>
+            {% if users[0][3] %}
+                <div><input type="checkbox" name="remove_admin" value=True>Remove Admin</div>
+            {% else %}
+                <div><input type="checkbox" name="make_admin" value=True>Make Admin</div>
+            {% endif %}
+        </div>
         <button class="button_wide">UPDATE</button>
     </form>
 {% endif %}
