- Added game instructions for new users / or users that have no cards

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 </div>               
                 <button class="button_wide">Reset Password</button>
             {% endif %}            
-            <p class="msg">{{msg}}</p>
+            <textarea class="msg">{{msg}}</textarea>
         </form>
     </div>
 </div>
