--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,19 +2,19 @@
 /* KEYFRAME ANIMNATIONS */
 @keyframes wave {
     0% {
-        border-image-source: linear-gradient(to top left, #c80000, rgb(255, 230, 0));
+        border-image-source: linear-gradient(to top left, #bb4fe6, rgb(0, 255, 255));
     }
     25% {
-        border-image-source: linear-gradient(to top right, #c80000, rgb(255, 230, 0));
+        border-image-source: linear-gradient(to top right, #a302e3, rgb(4, 189, 240));
     }
     50% {
-        border-image-source: linear-gradient(to bottom right, #c80000, rgb(255, 230, 0));
+        border-image-source: linear-gradient(to bottom right, #be1bff, rgb(0, 251, 255));
     }
     75% {
-        border-image-source: linear-gradient(to bottom left, #c80000, rgb(255, 230, 0));
+        border-image-source: linear-gradient(to bottom left, #a302e3, rgb(12, 153, 166));
     }
     100% {
-        border-image-source: linear-gradient(to top left, #c80000, rgb(255, 230, 0));
+        border-image-source: linear-gradient(to top left, #bb4fe6, rgb(0, 255, 255));
     }
 }
 @keyframes animate_bg {
@@ -145,17 +145,17 @@ body {
     width: 100%;
     height:60px;
     color: rgb(255, 255, 255);
-    background-color: rgb(28, 26, 28);
+    background-color: rgb(25, 10, 35);
     position: fixed;
     top: 0;
     z-index: 99;
 }
 .top_bar h4 {
-    color: white
+    color: rgb(192, 227, 250)
 }
 .inner_bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -194,15 +194,70 @@ body {
     width: 100%;
 }
 .card {
+    position: relative;
     margin: 10px;
-    height: 400px;
-    max-width: 250px;
-    min-width: 200px;
-    padding: 10px;
-    border: solid black 1px;
-    border-radius: 10px;
+    height: 340px;
+    width: 240px;
     overflow: hidden;
+    border: inset 5px rgb(67, 57, 57);
+    border: 10px solid;
+    border-image-slice: 1;
+    animation: wave 3s ease-in infinite;
     /* background-color: rgb(204, 204, 193); */
+}
+.card_name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;    
+    width: 100%;
+    height: 40%;
+    padding: 5px;
+    font-size: 20px;
+    font-family: 'Monoton', cursive;
+    letter-spacing: 2px;
+    word-spacing: 5px;
+    text-transform: uppercase;
+    color: white;
+    background-color: rgb(65, 9, 110);
+    border-bottom: dashed red 5px;
+    opacity: 0;
+    transition: 0.8s ease all;
+}
+.card_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: absolute;
+    box-sizing: border-box;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 10px;
+    height: 60%;
+    font-size: 14px;
+    background-color: white;
+    border-top: dashed rgb(87, 96, 220) 5px;
+    background-color: white;
+    overflow-x: auto;
+    opacity: 0;
+    transition: 0.8s ease all;
+}
+.card:hover .card_name {
+    opacity: 1;
+}
+.card:hover .card_info {
+    opacity: 1;
+}
+.tile_image {
+    width: 100%;
+    height: 100%;
+    transition: 1s ease all;
+}
+.tile_image:hover {
+    opacity: 0.1;
 }
 /* HEADERS */
 h1 {
@@ -213,6 +268,23 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 2px;
     word-spacing: 5px;
     color:rgb(65, 12, 173)
+}
+/* HOME FIELD */
+#how-to-play {
+    margin: 40px auto;
+    width: 100%;
+    max-width: 500px;
+    height: 130px;
+    display: flex column;
+    text-align: left;
+}
+#filter {
+    width: 50%;
+    max-width: 200px;
+    height: 24px;
+    background-color: rgb(224, 240, 251);
+    border-radius: 4px;
+    margin-top: 20px;
 }
 /* LOGIN FIELD */
 .login {
@@ -292,7 +364,7 @@ h1, h2, h3, h4, h5 {
 }
 th, td, tr {
     border: solid black 1px;
-    background-color: rgb(190, 245, 250);
+    background-color: rgb(224, 240, 251);
     padding: 3px;
 }
 /* HERO CHOICES */
@@ -355,16 +427,31 @@ th, td, tr {
     min-width: 300px;
     max-width: 550px;
     min-height: 0;
-    background-color: rgb(242, 241, 241);
-    border: solid rgb(13, 197, 234) 5px;
+    background-color: white;
+    border: ridge rgb(142, 74, 198) 8px;
 }
 #settings_options {
     width: 80%;
+    height: 50px;
+    max-width: 250px;
     margin: 20px auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: space-between;
+}
+.settings_button {
+    margin-left: 20px;
+    width: 60px;
+    border-radius: 3px;
+    transform: .8s ease all;
+}
+.settings_button:hover {
+    background-color: yellow;
+}
+.settings_line {
+    display: flex;
+    justify-content: space-between;
 }
 /* MEDIA QUERIES */
 @media screen and (max-width: 550px) {
